Fix wrong font size for Patreon Plugs

--- a/museum_site/static/css/grid.css
+++ b/museum_site/static/css/grid.css
@@ -619,8 +619,7 @@ input[name=q]
 .patreon-plug
 {
     font-family:cp437;
-    font-size:14px;
-    line-height:14px;
+    font-size:16px;
     color:#FF5;
     background:#000;
     padding:14px 8px;
